//
//  Created by Vonage on 18/5/26.
//

public enum ArchivingAccessibilityID {
    public static let startRecordingButton = "archiving-start-recording-button"
    public static let stopRecordingButton = "archiving-stop-recording-button"
    public static let recordingIndicator = "archiving-recording-indicator"
    public static let archiveList = "archiving-archive-list"
    public static let archiveItem = "archiving-archive-item"
    public static let downloadButton = "archiving-download-button"
}
