//
//  Created by Vonage on 15/5/26.
//

public enum WaitingRoomAccessibilityID {
    public static let screen = "waiting-room-screen"
    public static let usernameInput = "username-input"
    public static let joinMeetingButton = "join-meeting-button"
    public static let micEnabled = "waiting-room-mic-enabled"
    public static let micDisabled = "waiting-room-mic-disabled"
    public static let cameraEnabled = "waiting-room-camera-enabled"
    public static let cameraDisabled = "waiting-room-camera-disabled"
    public static let settingsButton = "WaitingRoom.SettingsButton"
}
