//
//  Created by Vonage on 15/5/26.
//

enum LandingPageAccessibilityID {
    static let screen = "landing-screen"
    static let roomNameInput = "room-name-input"
    static let joinWaitingRoomButton = "join-waiting-room-button"
    static let createNewRoomButton = "create-new-room-button"
    static let githubRepoButton = "github-repo-button"
    static let versionFooter = "version-footer"
}
