//
//  Created by Vonage on 8/6/26.
//

public enum CaptionsAccessibilityID {
    public static let toggleButton = "captions-toggle-button"
    public static let overlay = "captions-overlay"
    public static let captionItem = "captions-caption-item"
}
