...
            localized: "Cancel", bundle: AppLanguageStore.shared.localizedBundle(in: .module),
            locale: AppLanguageStore.shared.locale)
    }

    public static var muteButtonTitle: String {
        String(
            localized: "Mute", bundle: AppLanguageStore.shared.localizedBundle(in: .module),
            locale: AppLanguageStore.shared.locale)
    }
}

@Observable
public final class MeetingRoomViewModel {
...
